--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -6,6 +6,21 @@
     "birthday": "Дата рождения",
     "sex": "Пол",
     "male": "Мужской",
-    "female": "Женский"
+    "female": "Женский",
+    "activity": "Активность",
+    "activity_min": "Минимальная",
+    "activity_low": "Небольшая",
+    "activity_avg": "Средняя",
+    "activity_intense": "Выше среднего",
+    "activity_high": "Повышенная",
+    "activity_veryhigh": "Высокая",
+    "activity_max": "Очень высокая",
+    "goal": "Цель",
+    "lose": "Снижение веса",
+    "keep": "Поддерживать норму",
+    "gain": "Набрать вес"
+  },
+  "button": {
+    "continue": "Продолжить"
   }
 }
