--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -17,7 +17,7 @@
     "activity_max": "Very hight",
     "goal": "Goal",
     "lose": "To lose",
-    "keep": "To keep",
+    "maintain": "To maintain",
     "gain": "To gain"
   },
   "button": {
