--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -17,7 +17,7 @@
     "activity_max": "Очень высокая",
     "goal": "Цель",
     "lose": "Снижение веса",
-    "keep": "Поддерживать норму",
+    "maintain": "Поддерживать норму",
     "gain": "Набрать вес"
   },
   "button": {
