Add more translations

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -20,7 +20,17 @@
     "maintain": "To maintain",
     "gain": "To gain"
   },
+  "nutrients": {
+    "proteins": "Proteins",
+    "fats": "Fats",
+    "carbohydrates": "Carbohydrates",
+    "kcalories": "Calories"
+  },
+  "unit": {
+    "gram": "g",
+    "kcal": "kcal"
+  },
   "button": {
-    "continue": "Продолжить"
+    "continue": "Continue"
   }
 }
