--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -39,9 +39,34 @@
     "gram": "г",
     "kcal": "ккал"
   },
+  "activity":  {
+    "min": "Oтсутствие физических нагрузок, сидячая работа, минимум движения",
+    "low": "Легкие тренировки или прогулки, небольшая активность в течение дня",
+    "avg": "Тренировки 4-5 раз в неделю, хорошая активность в течение дня",
+    "intense": "Интенсивные тренировки 5-6 раз в неделю, хорошая активность в течение дня",
+    "high": "Ежедневные тренировки, высокая дневная активность",
+    "veryhigh": "Ежедневные ультра-интенсивные тренировки и высокая дневная активность",
+    "max": " Для спортсменов в период соревновательной активности"
+  },
   "button": {
     "continue": "Продолжить",
     "remove": "Удалить",
-    "cancel": "Отменить"
+    "cancel": "Отменить",
+    "back": "Назад",
+    "start": "Старт"
+  },
+  "welcome": {
+    "personal": {
+      "header": "На старт!",
+      "desc": "Для начала расскажите немного о себе"
+    },
+    "inputs": {
+      "header": "Внимание!",
+      "desc": "Параметры и стиль жизни"
+    },
+    "goals": {
+      "header": "Поехали!",
+      "desc": "Спортивные/фитнес цели"
+    }
   }
 }
