--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -14,7 +14,7 @@
     "activity_intense": "Intense",
     "activity_high": "Higher than average",
     "activity_veryhigh": "High",
-    "activity_max": "Very hight",
+    "activity_max": "Very high",
     "goal": "Goal",
     "lose": "To lose",
     "maintain": "To maintain",
@@ -40,13 +40,13 @@
     "kcal": "kcal"
   },
   "activity":  {
-    "min": "Minimal",
-    "low": "Low",
-    "avg": "Average",
-    "intense": "Intense",
-    "high": "Higher than average",
-    "veryhigh": "High",
-    "max": "Very hight"
+    "min": "Minimal activity (lack of physical activity, sedentary work)",
+    "low": "Little activity (light workout or walking, little daily activity during the day)",
+    "avg": "Average activity (workout 4-5 times a week, good activity during the day)",
+    "intense": "Above average activity (intense workout 5-6 times a week, good activity during the day)",
+    "high": "Increased activity (daily workout, high daily activity)",
+    "veryhigh": "High activity (daily very intense training and high daily activity)",
+    "max": "Very high activity (sportsmen in a period of preparations for a competition)"
   },
   "button": {
     "continue": "Continue",
