--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -5,8 +5,8 @@
     "height": "Рост, см",
     "birthday": "Дата рождения",
     "sex": "Пол",
-    "male": "Мужской",
-    "female": "Женский",
+    "male": "Мужчина",
+    "female": "Женщина",
     "activity": "Активность",
     "activity_min": "Минимальная",
     "activity_low": "Небольшая",
@@ -20,12 +20,16 @@
     "maintain": "Поддерживать норму",
     "gain": "Набрать вес"
   },
+  "goals": {
+    "header": "Ваши цели",
+    "energy": "Норма калорий (ккал/сутки)"
+  },
   "nutrients": {
     "mass": "Масса",
     "proteins": " Белки",
     "fats": "Жиры",
-    "carbohydrates": "Углеводы",
-    "kcalories": "Энерг. ценность",
+    "carbs": "Углеводы",
+    "energy": "Энерг. ценность",
     "E": "К",
     "P": "Б",
     "F": "Ж",
