--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -28,7 +28,7 @@
     "mass": "Mass",
     "proteins": "Proteins",
     "fats": "Fats",
-    "carbs": "Carbohydrates",
+    "carbs": "Carbs",
     "energy": "Energy",
     "E": "E",
     "P": "P",
