Add more locales

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -41,7 +41,8 @@
   },
   "unit": {
     "gram": "g",
-    "kcal": "kcal"
+    "kcal": "kcal",
+    "yearsold": "y.o."
   },
   "activity":  {
     "min": "Minimal activity (lack of physical activity, sedentary work)",
