--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -41,7 +41,8 @@
   },
   "unit": {
     "gram": "г",
-    "kcal": "ккал"
+    "kcal": "ккал",
+    "yearsold": "л."
   },
   "activity":  {
     "min": "Oтсутствие физических нагрузок, сидячая работа, минимум движения",
