Change ru translation

--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -29,7 +29,7 @@
     "proteins": "Белки",
     "fats": "Жиры",
     "carbs": "Углеводы",
-    "energy": "Энерг. ценность",
+    "energy": "Калории",
     "E": "К",
     "P": "Б",
     "F": "Ж",
