--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -58,7 +58,26 @@
     "remove": "Удалить",
     "cancel": "Отменить",
     "back": "Назад",
-    "start": "Старт"
+    "start": "Старт",
+    "save": "Сохранить"
+  },
+  "dialog": {
+    "meal": {
+      "add": "Новый приём пищи",
+      "change": "Изменить запись"
+    },
+    "dish": {
+      "choose": "Выбор блюд",
+      "add": "Добавить блюдо"
+    },
+    "product": {
+      "add": "Новый продукт",
+      "change": "Изменить продукт"
+    },
+    "recipe": {
+      "add": "Новый рецепт",
+      "change": "Изменить рецепт"
+    }
   },
   "welcome": {
     "personal": {
