--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -66,7 +66,7 @@
       "add": "Add a meal",
       "change": "Change the meal"
     },
-    "dishes": {
+    "dish": {
       "choose": "Choose a dish",
       "add": "Add the dish"
     },
