--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -59,7 +59,11 @@
     "cancel": "Отменить",
     "back": "Назад",
     "start": "Старт",
-    "save": "Сохранить"
+    "save": "Сохранить",
+    "clear": "Очистить",
+    "search": "Поиск",
+    "add": "Добавить",
+    "save_add": "Сохранить и добавить"
   },
   "dialog": {
     "meal": {
@@ -68,7 +72,13 @@
     },
     "dish": {
       "choose": "Выбор блюд",
-      "add": "Добавить блюдо"
+      "add": "Добавить блюдо",
+      "select": {
+        "product": "Выберите продукт",
+        "recipe": "Выберите рецепт"
+      },
+      "recipes": "Рецепты",
+      "products": "Продукты"
     },
     "product": {
       "add": "Новый продукт",
@@ -89,5 +99,11 @@
     "goals": {
       "header": "Спортивные/фитнес цели"
     }
+  },
+  "products": {
+    "empty": "Не найдено продуктов"
+  },
+  "recipes": {
+    "empty": "Не найдено рецептов"
   }
 }
