--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -26,6 +26,7 @@
   },
   "nutrients": {
     "mass": "Масса",
+    "portion": "Порция",
     "proteins": "Белки",
     "fats": "Жиры",
     "carbs": "Углеводы",
@@ -73,12 +74,16 @@
     "dish": {
       "choose": "Выбор блюд",
       "add": "Добавить блюдо",
+      "add_product": "Добавить продукт",
+      "add_recipe": "Добавить блюдо",
       "select": {
         "product": "Выберите продукт",
         "recipe": "Выберите рецепт"
       },
       "recipes": "Рецепты",
-      "products": "Продукты"
+      "products": "Продукты",
+      "per_100g": "Ценность на 100г",
+      "per_portion": "Ценность на порцию"
     },
     "product": {
       "add": "Новый продукт",
