--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -55,6 +55,7 @@
     "max": "Для спортсменов в период соревновательной активности"
   },
   "button": {
+    "yum": "Ням",
     "continue": "Продолжить",
     "remove": "Удалить",
     "cancel": "Отменить",
@@ -65,6 +66,9 @@
     "search": "Поиск",
     "add": "Добавить",
     "save_add": "Сохранить и добавить"
+  },
+  "label": {
+    "and_more": "и ещё {{count}}"
   },
   "dialog": {
     "meal": {
