--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -55,6 +55,7 @@
     "max": "Very high activity (sportsmen in a period of preparations for a competition)"
   },
   "button": {
+    "yum": "Yum",
     "continue": "Continue",
     "remove": "Remove",
     "cancel": "Cancel",
@@ -65,6 +66,9 @@
     "search": "Search",
     "add": "Add",
     "save_add": "Save and add"
+  },
+  "label": {
+    "and_more": "and {{count}} more"
   },
   "dialog": {
     "meal": {
@@ -110,5 +114,8 @@
   },
   "recipes": {
     "empty": "No recipes found"
+  },
+  "meals": {
+    "dishes": "Dishes"
   }
 }
