--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -85,6 +85,8 @@
       "add": "Добавить блюдо",
       "add_product": "Добавить продукт",
       "add_recipe": "Добавить блюдо",
+      "change_product": "Изменить массу",
+      "change_recipe": "Изменить порцию",
       "select": {
         "product": "Выберите продукт",
         "recipe": "Выберите рецепт"
