--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -70,7 +70,8 @@
     "search": "Поиск",
     "add": "Добавить",
     "save_add": "Сохранить и добавить",
-    "save_as_recipe": "Сохранить как рецепт"
+    "save_as_recipe": "Сохранить как рецепт",
+    "change": "Изменить"
   },
   "label": {
     "and_more": "и ещё {{count}}"
