Add a button to manage recipes and products on mobile devices

--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -118,9 +118,11 @@
     }
   },
   "products": {
+    "products": "Products",
     "empty": "No products found"
   },
   "recipes": {
+    "recipes": "Recipes",
     "empty": "No recipes found"
   },
   "meals": {
