--- a/static/locales/ru.json
+++ b/static/locales/ru.json
@@ -118,9 +118,11 @@
     }
   },
   "products": {
+    "products": "Продукты",
     "empty": "Не найдено продуктов"
   },
   "recipes": {
+    "recipes": "Рецепты",
     "empty": "Не найдено рецептов"
   }
 }
